<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_whiteo"
    tools:context="com.fin.amrit.amrit_final_app.AboutScreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <TextView
                    android:id="@+id/textView6"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_screen_background_info"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView7"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_screen_background_info_more"
                    android:textColor="@color/black"
                    android:textSize="30sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />


                <TextView
                    android:id="@+id/textView8"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_when_more"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView9"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_when_information"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView10"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_where_inforamtion"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView11"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_where_info"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/map"
                    android:layout_width="145dp"
                    android:layout_height="47dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/button_rounded"
                    android:text="@string/map"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView12"
                    android:layout_width="match_parent"
                    android:layout_height="70dp"
                    android:layout_marginTop="8dp"

                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_event"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView13"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_event_information"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/textView14"
                    android:layout_width="wrap_content"
                    android:layout_height="160dp"
                    android:layout_marginTop="8dp"
                    android:fontFamily="cursive"
                    android:gravity="center"
                    android:text="@string/about_rsvp_info"
                    android:textColor="@color/black"
                    android:textSize="25sp"
                    android:textStyle="normal"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="134dp"
                    android:orientation="vertical"
                    tools:layout_editor_absoluteX="8dp"
                    tools:layout_editor_absoluteY="1228dp">

                    <Button
                        android:id="@+id/rsvp"
                        android:layout_width="145dp"
                        android:layout_height="47dp"
                        android:layout_gravity="center"
                        android:layout_marginTop="8dp"
                        android:background="@drawable/button_rounded"
                        android:text="@string/rsvpButton"
                        android:textColor="@color/white"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />


                </LinearLayout>


            </LinearLayout>


        </ScrollView>
    </LinearLayout>

    <android.support.design.widget.BottomNavigationView
        android:id="@+id/navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:layout_marginStart="0dp"
        android:background="?android:attr/windowBackground"
        app:itemIconTint="@color/gold"
        app:itemTextColor="@color/gold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:menu="@menu/navigation" />


</android.support.constraint.ConstraintLayout>
